5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1637_2443.log
== SUBMITION (2019-04-11 11:28:21) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(4*pi*r**3/3)
else:
	print(pi*a**2*(3*r-a)/3
-- EXECUTION TIME:
0.235287
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 1
    form math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:10) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.1508
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 1
    form math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:11) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.267143
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 1
    form math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:12) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.168714
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 1
    form math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:29:12) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- ERROR:
File "XXXX", line 1
    form math import*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:12) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.336688
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 1
    form math import*
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:12) 
-- CODE:
form math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.274139
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:29:21) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.225171
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:29:21) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:32:26) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3,4-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.208639
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:42) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3,4-pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:33:08) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.312891
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:33:10) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:33:40) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = str(input('nmr da opcao: '))

if b == "1":
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.189585
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:34:02) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b =int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.278558
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:35:32) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)-4*pi*r**3/3/3,4))
-- EXECUTION TIME:
0.279997
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-43.4514
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:35:32) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)-4*pi*r**3/3/3,4))
-- EXECUTION TIME:
0.143093
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
179.5944
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:35:32) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)-4*pi*r**3/3/3,4))
-- EXECUTION TIME:
0.17445
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1637/2443/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:35:33) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)-4*pi*r**3/3/3,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:36:02) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3-4*pi*r**3/3,4))
-- EXECUTION TIME:
0.199571
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:02) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3-4*pi*r**3/3,4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:29) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3,4))
else:
	print(round(pi*a**2*(3*r-a)/3-(4*pi*r**3/3),4))
-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:38:25) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
else:
	print(round(4*pi*r**3/3,4))
-- EXECUTION TIME:
0.167135
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:44) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
else:
	print(round(4*pi*r**3/3,4))
-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:41:44) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.172163
-- ERROR:
  File "/home/codebench/codes/1637/2443/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:45) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3,4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:22) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3),4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
152.5174
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:37) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3),4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
152.5174
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:42:40) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3),4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.167069
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
152.5174
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:45) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(abs(pi*a**2*(3*r-a)-4*pi*r**3/3),4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- OUTPUT:
152.5174
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:45:29) 
-- CODE:
from math import*
r = float(input("raio: "))
a = float(input("altura "))
b = int(input('nmr da opcao: '))

if b == 1:
	print(round(4*pi*r**3/3-(4*pi*r**3/3-pi*a**2*(3*r-a)/3),4))
else:
	print(round(4*pi*r**3/3-pi*a**2*(3*r-a)/3,4))
-- EXECUTION TIME:
0.276625
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
